# cozy_tui

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cozy.ps1  examples.py  key_debug.py  mouse_debug.py  powershell_movie.ps1  pyproject.toml  tinp.py
.github/workflows/: ci.yml  release.yml
cozy_tui/: __init__.py  __main__.py  _console.py  _debug_pane.py  _devtools.py  _devtools_edit.py  _dock.py  _export.py  _presets.py  _rich_bridge.py  _spinners.py  _width.py  ansi.py  app.py  cli.py  clipboard.py  crash_screen.py  demo.py  events.py  markup.py  motion.py  screen.py  spinners.py  state.py  style.py  testing.py  theme.py  themes.py  widget.py
cozy_tui/widgets/: __init__.py  box.py  (+18 more)
docs/: concepts.md  examples.md  interaction.md  layouts.md  styling.md  testing.md  widgets.md
tests/: test_animated_label.py  test_animations.py  test_aquarium.py  test_bindings.py  test_calendar.py  test_catch_errors.py  test_cli.py  test_clipboard.py  test_code.py  test_command_palette.py  test_confirm_dialog.py  test_console.py  test_context_menu.py  test_crash_screen.py  test_cursor_shape.py  test_debug.py  test_deploy_example.py  test_devtools.py  test_devtools_edit.py  test_diff.py  test_dispatch_input.py  test_dock.py  test_drop_files_area.py  test_dropdown_overlay.py  test_events.py  test_export.py  test_file_manager.py  test_file_picker.py  test_focus.py  test_game_2048.py  test_hover_lists.py  test_hyperlink.py  test_image.py  test_input_mask.py  test_input_reveal.py  test_input_validation.py  test_layout.py  test_lifecycle.py  test_listview.py  test_markup.py  (+34 more)
(+114 files in other folders)
